--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background: deb887b8;
 }
 
 .logo {
@@ -43,3 +44,4 @@
 .read-the-docs {
   color: #888;
 }
+
