--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: deb887b8;
 }
 
 /* Container for the entire to-do list */
